--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,6 +1,5 @@
 header{
-    position: fixed;
-    top: 0;
+    position: relative;
     width: 100%;
     z-index: 5;
     display: flex;
@@ -10,7 +9,7 @@ header{
     height: 64px;
     width: 100%;
     background-color: white;
-  
+
     & .burger{
         display: flex;
         flex-flow: column;
@@ -32,7 +31,7 @@ header{
 .menu{
     position: fixed;
     top: 64px;
-    z-index: 2;
+    /* z-index: 1; */
     transform: translateY(-100%);
     transition: transform 1s ease;
     width: 100%;
