--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -1,3 +1,5 @@
+/****** SMARTPHONE ******//****** SMARTPHONE ******//****** SMARTPHONE ******/
+
 #presentation{
     display: flex;
     flex-flow: column;
@@ -18,6 +20,7 @@
     }
 }
 #projects, #codepen{
+
     & .projects__list{
         display: flex;
         flex-flow: column;
@@ -142,11 +145,9 @@
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
     #projects, #codepen{
-        --cardWidth : calc((100vw - 2*36px - 24px) / 2);
-  
         & .projects__list{
             flex-flow: row wrap;
-            gap: 24px;
+            justify-content: center;
         }
     }
     #skills{
