--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,21 @@
   box-sizing: border-box;
 }
 body{
+  display: flex;
+  flex-flow: column;
   font-family: "Ubuntu", sans-serif;
   font-weight: 400;
-  --salienceColor : rgb(41, 204, 210);
+  --salienceColor : #29ccd2;
+}
+main{
+  margin: 64px 0 24px;
+  display: flex;
+  flex-flow: column;
+  gap: 60px;
+  width: min(100%, 1700px);
+}
+section{
+  padding: 0 24px;
 }
 ul{
   list-style-type: none;
@@ -21,7 +33,6 @@ a{
       color: var(--salienceColor);
   }
 }
-
 button{
   border: none;
   background-color: transparent;
@@ -32,16 +43,6 @@ h1, h2{
 }
 h1{
   font-size: 2rem;
-}
-main{
-  margin: 64px 0 24px;
-  display: flex;
-  flex-flow: column;
-  gap: 60px;
-}
-section{
-
-  padding: 0 24px;
 }
 
 /***** DESKTOP *****//***** DESKTOP *****//***** DESKTOP *****//***** DESKTOP *****/
@@ -58,9 +59,6 @@ section{
 /***** TABLET *****//***** TABLET *****//***** TABLET *****//***** TABLET *****//***** TABLET *****/
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
-  header{
-      padding: 0 24px 0 36px;
-  }
   section{
       min-height: 50vh;
       padding: 0 36px;
