--- a/src/Pages/home.css
+++ b/src/Pages/home.css
@@ -41,20 +41,6 @@
         display: flex;
         flex-flow: column;
         gap: 60px;
-  
-        & .school__category{
-            margin-bottom: 4px;
-            font-weight: 400;
-            font-size: .9rem;
-        }
-        & .school__name{
-            font-size: 2.5rem;
-            font-weight: 700;
-            margin-bottom: 16px;
-        }
-        & .school__option{
-            font-size: 1.4rem;
-        }
     }
   }
   #contact{
@@ -63,16 +49,10 @@
         flex-flow: column;
         gap: 60px;
     }
-    & .contact__text{
-            margin-bottom: 4px;
-            font-weight: 400;
-            font-size: .9rem;
-    }
     & .contact__mail{
         display: flex;
         align-items: center;
         gap: 16px;
-        font-size: 1.4rem;
         transition: all 300ms ease;
   
         & .fa-envelope{
@@ -82,11 +62,6 @@
             text-decoration: underline;
             text-underline-offset: 5px;
         }
-    }
-    & .contact__title{
-        font-size: 2.4rem;
-        font-weight: 700;
-        margin-bottom: 16px;
     }
     & .contact__socials-list{
         display: flex;
@@ -140,7 +115,25 @@
             grid-area: 2 / 2 / 3 / 3;
         }
     }
+    #contact{
+        & .contact__list{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto;
+            gap: 60px;
+
+            & .list-item:nth-of-type(3){
+                grid-area: 1/2/3/3;
+            }
+        }
+    }
 }
+    /****** LARGEDESKTOP *****/
+    @media screen and (min-width: 1700px) {
+        #presentation{
+            height: 50vh;
+        }
+    }
 /***** TABLET *****//***** TABLET *****//***** TABLET *****//***** TABLET *****//***** TABLET *****/
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
@@ -169,6 +162,18 @@
         }
         & .education__list{
             grid-area: 2 / 2 / 3 / 3;
+        }
+    }
+    #contact{
+        & .contact__list{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: auto auto;
+            gap: 60px;
+
+            & .list-item:nth-of-type(3){
+                grid-area: 2/1/3/3;
+            }
         }
     }
 } 
