--- a/src/Components/Card/card.css
+++ b/src/Components/Card/card.css
@@ -22,6 +22,7 @@
         align-items: center;
         position: relative;
         transform: rotateY(0deg);
+        z-index: 1;
     }
     & .back{
         position: absolute;
@@ -50,7 +51,7 @@
     } 
 }
 
-& .front::after{
+.front::after{
     content: "";
     position: absolute;
     left: 50%;
@@ -63,7 +64,7 @@
     opacity: .5;
     backface-visibility: hidden;
 }
-& .front__caption{
+.front__caption{
     display: flex;
     flex-flow: column;
     gap: 18px;
@@ -103,7 +104,7 @@
         
     }
 }
-& .infos{
+.infos{
     position: absolute;
     top: 25%;
     transform-style: preserve-3d;
@@ -116,24 +117,23 @@
     border-radius: 10px;
     box-shadow: 0 -10px 4px -4px rgb(255,255,255, 0.3);
     background: linear-gradient(rgb(255, 255, 255, .95) 10%, rgb(250, 250, 250, 1) 30%);
-
-    & .text{
-        width: 100%;
-        display: flex;
-        flex-flow: column;
-        gap: 12px;
-    }
-    & .text__title{
-        font-size: 1.2rem;
-        font-weight: 700;
-        opacity: .87;
-    }
-    & .text__p{
-        font-size: .9rem;
-        text-wrap: pretty;
-    }
 }
-& .links{
+.text{
+    width: 100%;
+    display: flex;
+    flex-flow: column;
+    gap: 12px;
+}
+.text__title{
+    font-size: 1.2rem;
+    font-weight: 700;
+    opacity: .87;
+}
+.text__p{
+    font-size: .9rem;
+    text-wrap: pretty;
+}
+.links{
     display: flex;
     gap: 2rem;
     text-transform: uppercase;
@@ -152,7 +152,7 @@
         }
     }
 }
-& .tools__title{
+.tools__title{
     margin-bottom: 8px;
 }
 .tools__icon-container{
